Fix navbar words not showing

--- a/opera_museum/museum/static/museum/navbar/css/navbar.css
+++ b/opera_museum/museum/static/museum/navbar/css/navbar.css
@@ -23,8 +23,9 @@
 }
 
 .nav {
-    float: right;
-	margin-top: 26px;
+    float: left;
+	margin-top: -25px;
+    margin-left: 360px;
 }
 
 .nav a {
